updated UI and added trackers for words guessed and attempts left

--- a/index.html
+++ b/index.html
@@ -55,6 +55,24 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
+        <div class="row">
+          <div class="col-3">
+            <span class = "numTriesHolder">Tries Left:</span>
+          </div>
+          <div class="col-9">
+            Letters Guessed:
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <span id = "numTries" class = "numTriesHolder">8</span>
+          </div>
+          <div class="col-9">
+            <span id = "guessedWordTrackerDisplay" class = "guessedWordTrackerDisplay"></span>
+          </div>
+        </div>
+        <br>
+        <hr>
         <span class = "guessWord">Guessed:</span>
         <span id = "guessWord" class = "guessWord"></span>
       </div>
